2005-12-07  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm.1.in:
	corrected typos

2005-11-27  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/frame.c (frame_free_move_resize_args):
	fixed drawing of transparent decorations or when using lazy shading
	during resize

2005-11-26  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	* libs/fvwmsignal.c:
	* libs/Graphics.c:
	c89 fixes

	* fvwm/ewmh_names.c:
	* libs/CombineChars.c:
	* libs/FGettext.c:
	* libs/FScreen.c:
	* libs/FTips.c:
	* libs/Flocale.c:
	* libs/Parse.c:
	* libs/PictureUtils.c:
	* libs/System.c:
	* libs/XError.c:
	* libs/alloca.c:
	* libs/envvar.c:
	* libs/safemalloc.c:
	* libs/strdup.c:
	* libs/usleep.c:
	do not #include stdlib.h (comes from config.h)

	* libs/Flocale.c:
	do not #include string.h (comes from config.h)

	* acconfig.h:
	fixed detection of string.h/strings.h

2005-11-26  Viktor Griph  <griph@dd.chalmers.se>

	* libs/Fft.c (FftGetFont):
	fixed compiler warning with gcc 3.4.4

2005-11-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menuitem.c (menuitem_paint):
	properly undraw unselected item area

2005-11-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menuitem.c (menuitem_paint):
	* fvwm/menus.c (get_menu_paint_item_parameters)
	(get_menu_paint_item_parameters):
	(make_menu):
	fixed text offset of menu items with icons but with an item format that
	disables icons
	(size_menu_horizontally):
	allow sidepic to be placed in the middle of menu items; this is better
	than ignoring the item format completely but does not draw the items
	properly either

	* fvwm/menus.c (__mloop_handle_event):
	(menu_expose):
	fixed delayed menu drawing issue
	(select_menu_item):
	do not draw the selected menu item before the menu is drawn for the
	first time
	(repaint_transparent_menu):
	(select_menu_item):
	(paint_menu):
	don't call get_menu_paint_item_parameters when the result is not used
	(get_menu_paint_item_parameters):

2005-11-10  Viktor Griph  <griph@dd.chalmers.se>
