@@ -2,6 +2,9 @@ To find out what should go in this file, see "Information For
 Maintainers of GNU Software" (maintain.texi), the section called
 "Recording Changes".
 
+Malcolm Still:
+New MenuStyle option TrianglesUseFore.
+
 Evgeny Stambulchik:
 Patch to improve look of "BorderStyle TiledPixmap" windows.
 
