@@ -8,8 +8,7 @@ Changes in beta release 2.5.15 (not released yet)
 * New features:
 
    - Variables can be nested, like $[desk.name$[desk.n]].
-   - Obsolete one-letter variables work, but generate warnings now.
-   - Added MouseWheel and ScrollOffPage menu style options.
+   - Obsolete one-letter variables work, but generate warnings now.   
    - Windows can be placed by any button (now also >3)
    - It is now possible to redefine the buttons usable to finish
      window movement and manual placement.
@@ -17,6 +16,8 @@ Changes in beta release 2.5.15 (not released yet)
    - MenuStyle pairs can be negated by prefixing '!'.
    - New generic tabbing module - FvwmTabs.
    - New Style option: EWMHIgnoreWindowType.
+   - New MenuStyle options: MouseWheel, ScrollOffPage and 
+     TrianglesUseFore.
 
 * Bug Fixes:
 
